change: script arguments;

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>Demo page of the widget</title>
   </head>
   <body>
@@ -27,8 +28,7 @@
         fjs.parentNode.insertBefore(js, fjs);
       })(window, document, "script", "mw", "./widget.js");
       mw("init", { someConfiguration: 42 });
-      mw("message", "Hello world black!");
-      mw("color", "white");
+      mw("react", "white");
     </script>
   </body>
 </html>
