fix: toggle on blur for button

--- a/demo/index.html
+++ b/demo/index.html
@@ -31,7 +31,7 @@
       mw("init", { someConfiguration: 42 });
       mw("react", {
         color: "white",
-        button: false,
+        button: true,
         businessId: "5c743f5a5595656861ed4123"
       });
     </script>
