add: renew notification behavior and possibility to choose chats

--- a/demo/index.html
+++ b/demo/index.html
@@ -31,8 +31,8 @@
       mw("init", { someConfiguration: 42 });
       mw("react", {
         color: "white",
-        button: true,
-        businessId: "5c743f5a5595656861ed4123"
+        button: false,
+        businessId: "5c98cc20b5204069002374f9"
       });
     </script>
   </body>
