add: functionality for multi buttons

--- a/demo/index.html
+++ b/demo/index.html
@@ -32,7 +32,10 @@
       mw("react", {
         color: "white",
         button: false,
-        businessId: "5c98cc20b5204069002374f9"
+        businessId: "5c98cc20b5204069002374f9",
+        targets: [
+          { businessId: "5c98cc20b5204069002374f9", buttonId: "eyezonButton" }
+        ]
       });
     </script>
   </body>
