static files implemented

--- a/demo/index.html
+++ b/demo/index.html
@@ -40,7 +40,7 @@
       mw("init", { someConfiguration: 42 });
       mw("react", {
         color: "white",
-        button: false,
+        button: true,
         businessId: "5c98cc20b5204069002374f9",
         targets: [
           { businessId: "5c74052c1c9d440000002469", buttonId: "eyezonButton" },
