--- a/demo/index.html
+++ b/demo/index.html
@@ -13,8 +13,8 @@
       blandit. Libero nec eu dolor eget volutpat. Magna nulla neque. Fames
       tempus lorem duis orci ipsum.
     </p>
-    <a href="#" id="eyezonButton">DO IT</a>
-    <a href="#" id="eyezonButton2">DO IT</a>
+    <div href="#" id="eyezonButton">DO IT</div>
+    <button href="#" id="eyezonButton2">DO IT</button>
 
     <script>
       let button1 = document.getElementById("eyezonButton");
