--- a/demo/index.html
+++ b/demo/index.html
@@ -40,11 +40,11 @@
       mw("init", { someConfiguration: 42 });
       mw("react", {
         color: "white",
-        button: true,
-        businessId: "5c98cc20b5204069002374f9",
+        buttonOnTop: true,
+        businessId: "5ccfebb01f62764ff0022b12",
+        initialButtonId: "5d5b22d87e8dbf0036fa3da0",
         targets: [
-          { businessId: "5c74052c1c9d440000002469", buttonId: "eyezonButton" },
-          { businessId: "5c98cc20b5204069002374f9", buttonId: "eyezonButton2" }
+          { buttonId: "5d5b22d87e8dbf0036fa3da0", targetId: "eyezonButton" }
         ]
       });
     </script>
