--- a/demo/index.html
+++ b/demo/index.html
@@ -13,8 +13,7 @@
       blandit. Libero nec eu dolor eget volutpat. Magna nulla neque. Fames
       tempus lorem duis orci ipsum.
     </p>
-    <div href="#" id="eyezonButton">DO IT</div>
-    <button href="#" id="eyezonButton2">DO IT</button>
+    <button href="#" id="eyezonButton">DO IT</button>
 
     <script>
       let button1 = document.getElementById("eyezonButton");
