--- a/demo/index.html
+++ b/demo/index.html
@@ -16,13 +16,6 @@
     <button href="#" id="eyezonButton">DO IT</button>
 
     <script>
-      let button1 = document.getElementById("eyezonButton");
-      const func = () => {
-        console.log("first onclick worked");
-      };
-      button1.onclick = func;
-    </script>
-    <script>
       (function(w, d, s, o, f, js, fjs) {
         w["JS-Widget"] = o;
         w[o] =
@@ -39,7 +32,7 @@
       mw("init", { someConfiguration: 42 });
       mw("react", {
         color: "white",
-        buttonOnTop: true,
+        buttonOnTop: false,
         businessId: "5ccfebb01f62764ff0022b12",
         initialButtonId: "5d5b22d87e8dbf0036fa3da0",
         targets: [
