--- a/demo/index.html
+++ b/demo/index.html
@@ -1,18 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
     <title>Demo page of the widget</title>
   </head>
-  <body>
+  <body style="height:110vh">
     <h1>Lorem ipsum dolor sit amet augue</h1>
     <h2>Fusce gravida vehicula vestibulum tortor pulvinar</h2>
-    <p>
-      Orci purus ante excepteur nunc nascetur rhoncus taciti ut. Ornare vitae
-      sed. Amet suspendisse integer rutrum aliquet venenatis. Nec sed nullam
-      mauris magna vel pretium non tristique. Porta justo ac dictumst aliquip
-      blandit. Libero nec eu dolor eget volutpat. Magna nulla neque. Fames
-      tempus lorem duis orci ipsum.
-    </p>
+
     <button href="#" id="eyezonButton">DO IT</button>
 
     <script>
