--- a/demo/index.html
+++ b/demo/index.html
@@ -6,8 +6,8 @@
     <meta name="theme-color" content="#000000" />
     <title>Demo page of the widget</title>
   </head>
-  <body style="height:110vh">
-    <h1>Lorem ipsum dolor sit amet augue</h1>
+  <body style="height:410vh">
+    <h1 style="margin-top:210vh">Lorem ipsum dolor sit amet augue</h1>
     <h2>Fusce gravida vehicula vestibulum tortor pulvinar</h2>
 
     <button href="#" id="eyezonButton">DO IT</button>
