fix: bug with initial load

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
     <title>Demo page of the widget</title>
   </head>
   <body style="height:410vh">
-    <h1 style="margin-top:210vh">Lorem ipsum dolor sit amet augue</h1>
+    <h1>Lorem ipsum dolor sit amet augue</h1>
     <h2>Fusce gravida vehicula vestibulum tortor pulvinar</h2>
 
     <button href="#" id="eyezonButton">DO IT</button>
