--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="manifest" href="manifest.json" />
     <title>Demo page of the widget</title>
   </head>
   <body style="height:410vh">
