--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,17 @@
     <title>Demo page of the widget</title>
   </head>
   <body style="height:410vh">
-    <h1>Lorem ipsum dolor sit amet augue</h1>
+    <div class="p-product__char-txt">
+      Артикул
+      <strong>
+        542
+      </strong>
+      / Артикул производителя
+      <strong>
+        A03943 2996
+      </strong>
+    </div>
+    <h3>Lorem ipsum dolor sit amet augue</h1>
     <h2>Fusce gravida vehicula vestibulum tortor pulvinar</h2>
 
     <button href="#" id="eyezonButton">DO IT</button>
