--- a/demo/index.html
+++ b/demo/index.html
@@ -42,7 +42,7 @@
         fjs.parentNode.insertBefore(js, fjs);
       })(window, document, "script", "mw", "./widget.js");
       mw("init", { someConfiguration: 42 });
-      mw("reacttest", {
+      mw("react", {
         color: "white",
         buttonOnTop: false,
         businessId: "5ccfebb01f62764ff0022b12",
