--- a/demo/index.html
+++ b/demo/index.html
@@ -44,7 +44,7 @@
       mw("init", { someConfiguration: 42 });
       mw("react", {
         color: "white",
-        buttonOnTop: false,
+        buttonOnTop: true,
         businessId: "5ccfebb01f62764ff0022b12",
         initialButtonId: "5d5b22d87e8dbf0036fa3da0",
         targets: [
