--- a/demo/index.html
+++ b/demo/index.html
@@ -40,7 +40,7 @@
         js.src = f;
         js.async = 1;
         fjs.parentNode.insertBefore(js, fjs);
-      })(window, document, "script", "mw", "./widget.js");
+      })(window, document, "script", "mw", "./eyezonwidget.js");
       mw("init", { someConfiguration: 42 });
       mw("react", {
         color: "white",
