--- a/demo/index.html
+++ b/demo/index.html
@@ -46,7 +46,7 @@
     </div>
     <h3>Lorem ipsum dolor sit amet augue</h1>
     <h2>Fusce gravida vehicula vestibulum tortor pulvinar</h2>
-
+    <h1>Testonly</h1>
     <button href="#" id="eyezonButton">DO IT</button>
     
     
