fix of incredibly stupid errors, pls don't leave testing functionality before pushing

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,8 +18,8 @@
       })(window, document, "script", "mw", "./eyezonwidget.js");
       window.onload = mw("install_eyezon", {
         buttonOnTop: true,
-        businessId: "5e81cf421cb513002ed6f39e",
-        initialButtonId: "5e81cf891cb513002ed6f3ab",
+        businessId: /*"5dd3c828430a0b0031cada58"*/"5e81cf421cb513002ed6f39e",
+        initialButtonId: /*"5e7a644561eeb90030e18f69"*/"5e81cf891cb513002ed6f3ab",
         targets: [
           { buttonId: "5e81cf891cb513002ed6f3ab", targetId: "eyezonButton" }
         ],
