--- a/demo/index.html
+++ b/demo/index.html
@@ -16,6 +16,7 @@
         js.async = 1;
         fjs.parentNode.insertBefore(js, fjs);
       })(window, document, "script", "mw", "./eyezonwidget.js");
+      window.eyezonWebRtcOnly = true;
       window.onload = mw("install_eyezon", {
         buttonOnTop: true,
         businessId: /*"5dd3c828430a0b0031cada58"*/"5e81cf421cb513002ed6f39e",
