--- a/demo/index.html
+++ b/demo/index.html
@@ -48,7 +48,8 @@
     <h3>Lorem ipsum dolor sit amet augue</h1>
     <h2>Fusce gravida vehicula vestibulum tortor pulvinar</h2>
     <h1>Testonly</h1>
-    <button href="#" id="eyezonButton">DO IT</button>
+    <button href="#" id="eyezonButton" onclick='window.eyezonGlobal.function(null, "5e83c81d8d5afd002e01e9be"); return false;'
+    >DO IT</button>
     <button href="#" id="eyezonButton3">DO IT</button>
     
     
