--- a/demo/index.html
+++ b/demo/index.html
@@ -50,7 +50,9 @@
       <button href="#" id="eyezonButton" onclick='window.eyezonGlobal.function(null, "5e83c81d8d5afd002e01e9be"); return false;'
     >DO IT</button>
     <h2>Fusce gravida vehicula vestibulum tortor pulvinar</h2>
-    <h1>Testonly</h1>
+    <h1>&nbsp;&nbsp;&nbsp;&nbsp;Testonly 
+      New Line&nbsp;&nbsp;&nbsp;
+    </h1>
     
     <button href="#" id="eyezonButton2">DO IT</button>
     <button href="#" id="eyezonButton3">DO IT</button>
