--- a/demo/index.html
+++ b/demo/index.html
@@ -18,12 +18,12 @@
       })(window, document, "script", "mw", "./eyezonwidget.js");
       window.eyezonWebRtcOnly = true;
       window.onload = mw("install_eyezon", {
-        buttonOnTop: true,
+        buttonOnTop: false,
         businessId: /*"5dd3c828430a0b0031cada58"*/"5e81cf421cb513002ed6f39e",
         initialButtonId: /*"5e7a644561eeb90030e18f69"*/"5e81cf891cb513002ed6f3ab",
         targets: [
-          { buttonId: "5e81cf891cb513002ed6f3ab", targetId: "eyezonButton2" }, 
-          { buttonId: "5ecbe4b24a857d1711bfeb9b", targetId: "eyezonButton3" }
+          /*{ buttonId: "5e81cf891cb513002ed6f3ab", targetId: "eyezonButton2" }, 
+          { buttonId: "5ecbe4b24a857d1711bfeb9b", targetId: "eyezonButton3" }*/
         ],
         eyezonGlobal: eyezonGlobal
       });
